--- a/style.css
+++ b/style.css
@@ -12,6 +12,16 @@ body {
     width: 100%;
 }
 
+#cursor{
+    height: 2.3vw;
+    width: 2.3vw;
+    z-index: 11;
+    border-radius: 50%;
+    border:1.5px solid white;
+    position: fixed;
+    mix-blend-mode: difference;
+    transform: translate(-50%,-50%);
+}
 .loader {
     background-color: #000000;
     height: 100%;
@@ -116,10 +126,74 @@ body {
     background-color: #151515;
     height: 100vh;
     width: 100%;
+    overflow: hidden;
 }
 
 .page2 {
     background-color: blue;
     height: 100vh;
     width: 100%;
+}
+
+#navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+    padding: 3vw 6vw;
+}
+
+.nav-part2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;
+
+}
+
+.nav-part2 h4 {
+    font-size: 1.6vw;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#hero h2 {
+    font-size: 6.3vw;
+    text-transform: uppercase;
+    font-family: 'plain light';
+    font-weight: 600;
+    line-height: 7vw;
+}
+
+.hero-line {
+    /* background-color: red; */
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    overflow: hidden;
+    gap: 1vw;
+}
+
+#hero3 h2 {
+    border-bottom: 6px solid white;
+    border-radius: 3px;
+   
+}
+
+#hero3 h2:hover {
+    -webkit-text-stroke: 2px #fff;
+    color: transparent;
+    font-weight: 500;
+    z-index: 99;
+
 }
