--- a/style.css
+++ b/style.css
@@ -4,60 +4,28 @@
     box-sizing: border-box;
     color: #FFFFFF;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
     background-color: #151515;
->>>>>>> f7de177 (completed till Page 4)
->>>>>>> 70ab65f (p)
 }
 
 html,
 body {
     height: 100%;
     width: 100%;
-<<<<<<< HEAD
-}
-
-#cursor{
-=======
-<<<<<<< HEAD
-}
-
-#cursor{
-=======
     overflow-x: hidden;
     background-color: #151515;
 }
 
 #cursor {
->>>>>>> f7de177 (completed till Page 4)
->>>>>>> 70ab65f (p)
     height: 2.3vw;
     width: 2.3vw;
     z-index: 11;
     border-radius: 50%;
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 70ab65f (p)
-    border:1.5px solid white;
-    position: fixed;
-    mix-blend-mode: difference;
-    transform: translate(-50%,-50%);
-}
-<<<<<<< HEAD
-=======
-=======
     border: 1.5px solid white;
     position: fixed;
     mix-blend-mode: difference;
     transform: translate(-50%, -50%);
 }
 
->>>>>>> f7de177 (completed till Page 4)
->>>>>>> 70ab65f (p)
 .loader {
     background-color: #000000;
     height: 100%;
@@ -68,15 +36,12 @@ body {
 }
 
 .line {
-    /* background-color: gold; */
     height: fit-content;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 1.7vw;
-
-
 }
 
 #line1-part1 {
@@ -88,7 +53,6 @@ body {
 }
 
 #line1-part1 h5 {
-    /* background-color: blue; */
     text-align: right;
     width: 3.5vw;
 }
@@ -137,7 +101,6 @@ body {
         -webkit-text-stroke: 0.1px #ffffff;
         opacity: 1;
     }
-
 }
 
 .line h3 {
@@ -145,17 +108,14 @@ body {
     font-family: "plain light";
     font-weight: 500;
     color: #FFFFFF;
-    /* animation-name: anime; */
     animation-duration: 2s;
     animation-timing-function: ease-in;
     animation-iteration-count: infinite;
-    ;
     opacity: 0;
 }
 
 #main {
     position: relative;
-
 }
 
 .page1 {
@@ -165,26 +125,10 @@ body {
     overflow: hidden;
 }
 
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 70ab65f (p)
-.page2 {
-    background-color: blue;
-    height: 100vh;
-    width: 100%;
-}
-<<<<<<< HEAD
-=======
-=======
->>>>>>> f7de177 (completed till Page 4)
->>>>>>> 70ab65f (p)
+/*  */
 
 #navbar {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-content: center;
     justify-content: space-between;
     padding: 3vw 6vw;
 }
@@ -192,9 +136,7 @@ body {
 .nav-part2 {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 3vw;
-
 }
 
 .nav-part2 h4 {
@@ -202,7 +144,6 @@ body {
     font-weight: 400;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 #hero {
@@ -220,7 +161,6 @@ body {
 }
 
 .hero-line {
-    /* background-color: red; */
     height: fit-content;
     display: flex;
     align-items: center;
@@ -232,15 +172,6 @@ body {
 #hero3 h2 {
     border-bottom: 6px solid white;
     border-radius: 3px;
-<<<<<<< HEAD
-   
-=======
-<<<<<<< HEAD
-   
-=======
-
->>>>>>> f7de177 (completed till Page 4)
->>>>>>> 70ab65f (p)
 }
 
 #hero3 h2:hover {
@@ -248,16 +179,9 @@ body {
     color: transparent;
     font-weight: 500;
     z-index: 99;
-
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
 }
 
-
 .page3 {
-
     background-color: #151515;
     height: 100vh;
     width: 100%;
@@ -265,11 +189,8 @@ body {
 }
 
 .vid-container {
-
-    /* background-color: red; */
     height: 80vh;
     width: 70vw;
-
 }
 
 .vid-container video {
@@ -301,7 +222,6 @@ body {
 }
 
 .page-4 {
-    /* background-color: gold; */
     height: 100vh;
     width: 100vw;
     padding: 5vw 0;
@@ -334,7 +254,7 @@ body {
     border-radius: 2vw;
 }
 
-.page-4-content>p {
+.page-4-content > p {
     width: 40vw;
     font-size: 3vw;
 }
@@ -342,7 +262,6 @@ body {
 .page-4-about {
     height: 100vh;
     width: 100vw;
-    /* background-color: blueviolet; */
     display: flex;
     gap: 2vw;
     margin-top: 2.5vw;
@@ -352,7 +271,6 @@ body {
     height: 100%;
     width: 40%;
     object-fit: cover;
-
 }
 
 .page-4-about p {
@@ -382,7 +300,6 @@ body {
 
 .elem h4 {
     background-color: #3F7DF4;
-
 }
 
 .elem p {
@@ -396,12 +313,9 @@ body {
     background-color: #fff;
     margin: 8.2vw 0 2vw 0;
     border-radius: 2vw;
-
 }
 
 .work {
     font-weight: 400;
     margin-bottom: 5vw;
->>>>>>> f7de177 (completed till Page 4)
->>>>>>> 70ab65f (p)
 }
