--- a/style.css
+++ b/style.css
@@ -337,19 +337,11 @@ body {
 }
 
 .page-5 {
-    min-height: 100vh;
+    /* height: 100vh; */
+    padding: 3vw 1vw;
     width: 100vw;
 }
 
-.page-5 {
-    min-height: 100vh;
-    width: 100vw;
-}
-
-.page-5 {
-    min-height: 100vh;
-    width: 100vw;
-}
 
 .elem-5 {
     white-space: nowrap;
@@ -409,4 +401,89 @@ body {
     font-family: 'silk sarif';
     font-style: italic;
     color: transparent;
+}
+
+.footer {
+    height: 80vh;
+    width: 100%;
+}
+
+.footer-content h1 {
+    /* background-color: red; */
+    font-size: 8vw;
+    font-weight: 500;
+    transition: all 0.3s ease;
+    padding: 2vw;
+}
+
+.footer-content {
+    width: 70vw;
+    margin-left: 30vw;
+}
+
+.footer-content i {
+    font-size: 10vw;
+    font-weight: 500;
+    -webkit-text-stroke: 1.6px #ffff;
+    color: transparent;
+    transition: all 0.3s ease;
+}
+
+.footer-content h1:hover {
+    font-family: 'sans serif';
+    font-style: italic;
+    -webkit-text-stroke: 2px #ffff;
+    color: transparent;
+    gap: 2vw;
+    font-size: 8.5vw;
+}
+
+.footer-content i:hover {
+    font-size: 10.5vw;
+}
+
+.footer-linee {
+    width: 70vw;
+    height: 1.5px;
+    background-color: #ffff;
+    margin-top: 20px;
+    margin-left: 30vw;
+}
+
+.footer-about {
+
+    width: 70vw;
+    margin-left: 30vw;
+    display: flex;
+    justify-content: flex-start;
+    padding: 2vw 0;
+    border-bottom: 2px solid white;
+}
+
+.box1 :nth-child(1) {
+    padding: 2vw 0;
+}
+
+.box1 {
+    margin-right: 10vw;
+}
+
+.box1 h5 {
+    font-size: 1.5vw;
+    font-weight: 500;
+}
+
+.last-linee {
+    width: 70vw;
+    height: 1.5px;
+    background-color: #ffff;
+
+    margin-left: 30vw;
+}
+
+.copyright {
+    height: 20vh;
+    width: 70vw;
+    margin-left: 30vw;
+    padding: 2vw 0;
 }
