--- a/style.css
+++ b/style.css
@@ -134,9 +134,9 @@ body {
 
 .page1 {
     background-color: #151515;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
-    overflow: hidden;
+    
 }
 
 /*  */
@@ -194,7 +194,15 @@ body {
     font-weight: 500;
     z-index: 99;
 }
-
+#hero::before {
+    left: 24%;
+  
+    content: "01";
+    position: absolute;
+    font-size: 3vw;
+    font-family: 'silk serif';
+    font-weight: 100;
+}
 .page3 {
     background-color: #151515;
     height: 100vh;
@@ -255,6 +263,17 @@ body {
     font-size: 10vw;
     font-weight: 600;
     text-transform: uppercase;
+    position: relative;
+}
+
+.page-4-content h1::before {
+    left: -7%;
+    top: 17%;
+    content: "03";
+    position: absolute;
+    font-size: 3vw;
+    font-family: 'silk serif';
+    font-weight: 100;
 }
 
 .page-4-content h1:hover {
@@ -337,7 +356,7 @@ body {
 }
 
 .page-5 {
-    /* height: 100vh; */
+    min-height: 70vh;
     padding: 3vw 1vw;
     width: 100vw;
 }
@@ -414,6 +433,8 @@ body {
     font-weight: 500;
     transition: all 0.3s ease;
     padding: 2vw;
+    min-height: 2em;
+    position: relative;
 }
 
 .footer-content {
@@ -422,24 +443,27 @@ body {
 }
 
 .footer-content i {
-    font-size: 10vw;
     font-weight: 500;
     -webkit-text-stroke: 1.6px #ffff;
     color: transparent;
     transition: all 0.3s ease;
 }
 
+.footer-content h1::before {
+    left: -10%;
+    top: 20%;
+    content: "04";
+    position: absolute;
+    font-size: 3vw;
+    font-family: 'silk serif';
+    font-weight: 100;
+}
 .footer-content h1:hover {
     font-family: 'sans serif';
     font-style: italic;
     -webkit-text-stroke: 2px #ffff;
     color: transparent;
-    gap: 2vw;
-    font-size: 8.5vw;
-}
 
-.footer-content i:hover {
-    font-size: 10.5vw;
 }
 
 .footer-linee {
@@ -457,7 +481,6 @@ body {
     display: flex;
     justify-content: flex-start;
     padding: 2vw 0;
-    border-bottom: 2px solid white;
 }
 
 .box1 :nth-child(1) {
@@ -477,7 +500,7 @@ body {
     width: 70vw;
     height: 1.5px;
     background-color: #ffff;
-
+    margin-top: 20px;
     margin-left: 30vw;
 }
 
