--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     color: #FFFFFF;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #151515;
+    /* background-color: #151515; */
 
 }
 
@@ -168,6 +168,7 @@ body {
     font-family: 'plain light';
     font-weight: 600;
     line-height: 7vw;
+    background-color: transparent;
 }
 
 .hero-line {
@@ -201,6 +202,19 @@ body {
     font-weight: 100;
 }
 
+#Flag {
+    height: 20vw;
+    position: absolute;
+    top: 0;
+    left:0;    
+    transform:translate(-50% ,-50%);
+    opacity: 0;
+}
+#hero3{
+    
+    z-index: 99999;
+    position: relative;
+}
 .page3 {
     background-color: #151515;
     height: 100vh;
