--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-
 @font-face {
     font-family: 'plain light';
     src: url(./assets/Fonts/plain-regular-webfont.ttf);
 }
+
 @font-face {
     font-family: 'plain light';
     src: url(./assets/Fonts/plain-light-webfont.ttf);
@@ -22,7 +22,7 @@
     padding: 0;
     margin: 0;
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     color: #FFFFFF;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     /* background-color: #151515; */
@@ -68,11 +68,11 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     gap: 1.7vw;
     background-color: #000000;
 }
@@ -82,11 +82,11 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 1.3vw;
     color: #fff;
     background-color: #000000;
@@ -192,11 +192,11 @@ body {
     font-weight: 500;
     color: #FFFFFF;
     -webkit-animation-duration: 2s;
-            animation-duration: 2s;
+    animation-duration: 2s;
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
     -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
     opacity: 0;
     background-color: #000000;
 }
@@ -219,8 +219,8 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     padding: 3vw 6vw;
 }
 
@@ -229,8 +229,8 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 3vw;
 }
 
@@ -241,8 +241,8 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 #hero {
@@ -251,11 +251,11 @@ body {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 #hero h2 {
@@ -275,11 +275,11 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     overflow: hidden;
     gap: 1vw;
 }
@@ -312,8 +312,8 @@ body {
     top: 0;
     left: 0;
     -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     opacity: 0;
 }
 
@@ -344,7 +344,7 @@ body {
     height: 100%;
     width: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     position: relative;
     left: 30vw;
 }
@@ -365,11 +365,11 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 
@@ -387,8 +387,9 @@ body {
     height: 100vh;
     width: 100vw;
     padding: 5vw 0;
-    position: relative;
+    /* position: relative; */
     padding-top: 0;
+    z-index: 1;
 }
 
 .page-4-content {
@@ -447,7 +448,7 @@ body {
     height: 100%;
     width: 40%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
 }
 
 .page-4-about p {
@@ -470,11 +471,11 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     background-color: #3F7DF4;
     margin: 1vw 0;
     padding: 1vw 0;
@@ -527,31 +528,31 @@ body {
     display: inline-block;
     margin-right: 10px;
     -webkit-animation: anime 10s linear infinite;
-            animation: anime 10s linear infinite;
+    animation: anime 10s linear infinite;
     will-change: transform;
 }
 
 @-webkit-keyframes anime {
     from {
         -webkit-transform: translateX(0);
-                transform: translateX(0);
+        transform: translateX(0);
     }
 
     to {
         -webkit-transform: translateX(calc(-100% - 20px));
-                transform: translateX(calc(-100% - 20px));
+        transform: translateX(calc(-100% - 20px));
     }
 }
 
 @keyframes anime {
     from {
         -webkit-transform: translateX(0);
-                transform: translateX(0);
+        transform: translateX(0);
     }
 
     to {
         -webkit-transform: translateX(calc(-100% - 20px));
-                transform: translateX(calc(-100% - 20px));
+        transform: translateX(calc(-100% - 20px));
     }
 }
 
@@ -570,7 +571,7 @@ body {
     display: inline-block;
     margin-right: 10px;
     -webkit-animation: anime 10s linear infinite;
-            animation: anime 10s linear infinite;
+    animation: anime 10s linear infinite;
     will-change: transform;
     animation-direction: reverse;
 
@@ -654,8 +655,8 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     padding: 2vw 0;
 }
 
@@ -687,6 +688,138 @@ body {
     padding: 2vw 0;
 }
 
+#page-animate {
+    /* background-color: pink; */
+    min-height: 100vw;
+    width: 100vw;
+    position: relative;
+    padding: 17vh 2vw;
+    z-index: 55;
+    margin-bottom: 32vw;
+}
+
+#page-animate h1 {
+    font-size: 10vw;
+    position: relative;
+    margin-left: 28vw;
+    padding: 7vw 0;
+    border-bottom: 2px solid;
+}
+
+#image-div-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1vw;
+    position: relative;
+    justify-content: space-around;
+    margin: 8vw 0;
+}
+
+.image-div {
+    height: 37vw;
+    width: 29vw;
+    position: relative;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.image-div img {
+    height: 100%;
+    width: 100%;
+
+}
+
+.imgdiv1 {
+    width: 25vw;
+    height: 30vw;
+}
+
+.page3-circle1 {
+    /* background-color: red; */
+    height: 25vw;
+    width: 25vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-left: 3vw;
+    margin-top: 18vw;
+    margin-bottom: 3vw;
+    border: 2px solid white;
+    text-align: center;
+}
+
+
+.page3-circle2 {
+    /* background-color: red; */
+    height: 25vw;
+    width: 25vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-left: 1vw;
+    border: 2px solid white;
+    text-align: center;
+}
+
+.imgdiv2 {
+    margin-top: 9vw;
+}
+
+.page3-circle1 svg {
+    height: 13vw;
+    transition: opacity 0.3s ease;
+    display: block;
+}
+
+.page3-circle2 svg {
+    rotate: -54deg;
+    height: 13vw;
+    transition: opacity 0.3s ease;
+    display: block;
+}
+
+.circle-in {
+    display: none;
+    transition: opacity 0.6s ease;
+    height: 25vw;
+    width: 25vw;
+    border-radius: 50%;
+    background-color: #fff;
+    position: relative;
+}
+
+
+.page3-circle1:hover .circle-in {
+    display: block;
+}
+
+.page3-circle2:hover .circle-in {
+    display: block;
+}
+
+.page3-circle1:hover svg {
+    transition: display 3s ease;
+    display: none;
+}
+
+.page3-circle2:hover svg {
+    transition: opacity 0.3s ease;
+    display: none;
+}
+
+.circle-in p {
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #000000;
+}
+
+
+
 
 @media (max-width:600px) {
 
@@ -703,8 +836,8 @@ body {
 
     #navbar {
         -webkit-box-pack: end;
-            -ms-flex-pack: end;
-                justify-content: flex-end;
+        -ms-flex-pack: end;
+        justify-content: flex-end;
         padding: 5vw 5vw;
         width: 100%;
     }
@@ -720,8 +853,8 @@ body {
     #hero {
         padding: 30vw 4vw;
         -webkit-box-align: start;
-            -ms-flex-align: start;
-                align-items: flex-start;
+        -ms-flex-align: start;
+        align-items: flex-start;
         padding-top: 50vw;
     }
 
@@ -764,8 +897,8 @@ body {
         right: 50%;
         top: 50%;
         -webkit-transform: translate(50%, -50%);
-            -ms-transform: translate(50%, -50%);
-                transform: translate(50%, -50%);
+        -ms-transform: translate(50%, -50%);
+        transform: translate(50%, -50%);
     }
 
     .page-3-cursor i {
@@ -814,8 +947,8 @@ body {
     .page-4-about {
         -webkit-box-orient: vertical;
         -webkit-box-direction: reverse;
-            -ms-flex-direction: column-reverse;
-                flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
         height: -webkit-fit-content;
         height: -moz-fit-content;
         height: fit-content;
@@ -846,8 +979,8 @@ body {
 
     .elem {
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
         padding: 6vw 1vw;
         border-bottom: 1.5px solid white;
     }
@@ -886,30 +1019,30 @@ body {
         -webkit-text-stroke: 1px #ffff;
         font-weight: 300;
         -webkit-animation: anime 15s linear infinite;
-                animation: anime 15s linear infinite;
+        animation: anime 15s linear infinite;
     }
 
     @-webkit-keyframes anime {
         from {
             -webkit-transform: translateX(0);
-                    transform: translateX(0);
+            transform: translateX(0);
         }
 
         to {
             -webkit-transform: translateX(calc(-100% - 20px));
-                    transform: translateX(calc(-100% - 20px));
+            transform: translateX(calc(-100% - 20px));
         }
     }
 
     @keyframes anime {
         from {
             -webkit-transform: translateX(0);
-                    transform: translateX(0);
+            transform: translateX(0);
         }
 
         to {
             -webkit-transform: translateX(calc(-100% - 20px));
-                    transform: translateX(calc(-100% - 20px));
+            transform: translateX(calc(-100% - 20px));
         }
     }
 
@@ -922,7 +1055,7 @@ body {
         -webkit-text-stroke: 1px #ffff;
         font-weight: 300;
         -webkit-animation: anime 15s linear infinite;
-                animation: anime 15s linear infinite;
+        animation: anime 15s linear infinite;
         will-change: transform;
         animation-direction: reverse;
 
@@ -967,11 +1100,11 @@ body {
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: flex-start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
         padding: 2vw 2vw;
     }
 
@@ -1038,21 +1171,128 @@ body {
 
     .line-animation {
         flex-direction: column;
-    align-items: flex-start;
+        align-items: flex-start;
     }
 
-   #line1-part1 h5,
-#line1-part1 h6 {
-    font-size: 4.5vw;
-    font-weight: 100;
-}
+    #line1-part1 h5,
+    #line1-part1 h6 {
+        font-size: 4.5vw;
+        font-weight: 100;
+    }
 
-#line1-part1 {
-    gap: 2vw;
-}
-#line1-part1 h5 {
-    text-align: right;
-    width: 6.5vw;
+    #line1-part1 {
+        gap: 2vw;
+    }
 
-}
+    #line1-part1 h5 {
+        text-align: right;
+        width: 6.5vw;
+    }
+
+
+
+
+    #page-animate {
+        /* background-color: pink; */
+        min-height: 100vw;
+        width: 100vw;
+        position: relative;
+        padding: 8vw 2vw;
+        z-index: 55;
+        margin-bottom: 10vw;
+    }
+
+    #page-animate h1 {
+        font-size: 9vw;
+        padding: 8vw 0;
+        border-bottom: 2px solid;
+    }
+
+    #image-div-container {
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 7vw 0;
+        position: relative;
+        justify-content: space-between;
+        gap: 5vw;
+    }
+
+    .image-div {
+        height: 90vw;
+        width: 90vw;
+        position: relative;
+        overflow: hidden;
+        flex-shrink: 0;
+    }
+
+    .image-div img {
+        height: 100%;
+        width: 100%;
+
+    }
+
+    .imgdiv1 {
+        width: 90vw;
+        height: 90vw;
+    }
+
+    .page3-circle1 {
+        /* background-color: red; */
+        height: 65vw;
+        width: 65vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        margin-left: 3vw;
+        margin-top: 18vw;
+        margin-bottom: 2vw;
+        border: 2px solid white;
+        text-align: center;
+
+    }
+
+    .page3-circle2 {
+        display: none;
+    }
+
+    .imgdiv2 {
+        margin-top: 11vw;
+    }
+
+    .page3-circle1 svg {
+        height: 22vw;
+        transition: opacity 0.3s ease;
+        display: block;
+    }
+
+
+    .circle-in {
+        display: none;
+        height: 60vw;
+        width: 60vw;
+    }
+
+
+    .page3-circle1:hover .circle-in {
+        display: block;
+    }
+
+
+    .page3-circle1:hover svg {
+        transition: display 3s ease;
+        display: none;
+    }
+
+
+    .circle-in p {
+        width: 80%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #000000;
+    }
+
 }
